--- a/index.html
+++ b/index.html
@@ -515,8 +515,10 @@
 <body>
     <!-- Ribbon: 20% Black on Left, 80% Yellow on Right with Backslash Tilt -->
     <div class="ribbon">
+        <div class="ribbon-logo-container">
+                <img src="NoxVappicon.png" alt="MySol-x Logo" class="ribbon-logo">
+        </div>
         <div class="ribbon-content">
-            <img src="NoxVappicon.png" alt="MySol-x Logo" class="ribbon-logo">
             <span>Welcome to MySol-x – Farm Points for a Token Drop!</span>
         </div>
     </div>
