--- a/index.html
+++ b/index.html
@@ -109,14 +109,20 @@
         }
         .left-block .logo-wrapper {
             display: inline-block;
-            box-shadow: 0 2px 6px rgba(250, 188, 44, 0.3);
+            box-shadow: 0 3px 8px rgba(250, 188, 44, 0.35);
             border: 1px solid rgba(250, 188, 44, 0.2);
             border-radius: 12px;
         }
         .left-block .logo-wrapper img {
-            width: 100px;
-            height: 100px;
+            width: 140px;
+            height: 140px;
             border-radius: 12px;
+        }
+        @media (max-width: 639px) {
+            .left-block .logo-wrapper img {
+                width: 140px;
+                height: 140px;
+            }
         }
         @media (min-width: 1024px) {
             .left-block .logo-wrapper img {
@@ -130,14 +136,14 @@
             border: 1px solid #303d43;
             border-radius: 16px;
             background: #10171b;
-            padding: 8px;
+            padding: 12px;
             width: 100%;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0,0,0,0.2), 0 4px 8px rgba(0,0,0,0.1);
             border-bottom: 2px solid #252d31;
             position: relative;
         }
-        .timer-desk .timer-wrap {
+        .timer-wrap {
             background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.15), transparent 70%), linear-gradient(145deg, #4b5356, #303d43 50%, #252d31);
             padding: 12px;
             border: 1px solid #4b5356;
@@ -148,14 +154,14 @@
             position: relative;
             box-shadow: inset 0 1px 1px rgba(255,255,255,0.1);
         }
-        .timer-desk .timer-wrap .timer-num {
+        .timer-wrap .timer-num {
             width: 56px;
             display: flex;
             flex-direction: column;
             align-items: center;
             position: relative;
         }
-        .timer-desk .timer-wrap .timer-num .dot {
+        .timer-wrap .timer-num .dot {
             display: flex;
             flex-direction: column;
             gap: 4px;
@@ -164,25 +170,25 @@
             right: -6px;
             transform: translateY(-50%);
         }
-        .timer-desk .timer-wrap .timer-num .dot span {
+        .timer-wrap .timer-num .dot span {
             width: 4px;
             height: 4px;
             background: #66747c;
             border-radius: 50%;
         }
-        .timer-desk .timer-wrap .timer-num .timer-num_title {
+        .timer-wrap .timer-num .timer-num_title {
             font-size: 16px;
             font-weight: 600;
             color: #eff5f6;
             text-shadow: 0 1px 1px rgba(0,0,0,0.3);
         }
         @media (min-width: 1024px) {
-            .timer-desk .timer-wrap .timer-num .timer-num_title {
+            .timer-wrap .timer-num .timer-num_title {
                 font-size: 28px;
                 line-height: 36px;
             }
         }
-        .timer-desk .timer-wrap .timer-num .sub-title {
+        .timer-wrap .timer-num .sub-title {
             font-size: 12px;
             font-weight: 600;
             color: #98a4aa;
@@ -190,7 +196,8 @@
         .timer-label {
             display: block;
             text-align: center;
-            margin-bottom: 2px;
+            margin-bottom: 0px;
+            margin-top: 16px;
             background: linear-gradient(145deg, #303d43, #4b5356);
             font-size: 16px;
             font-weight: 600;
@@ -213,12 +220,6 @@
             height: 2px;
             background: #fabc2c;
             border-radius: 1px;
-        }
-        .timer-note {
-            font-size: 12px;
-            color: #98a4aa;
-            margin-top: 8px;
-            text-align: center;
         }
 
         /* Timer Animation */
@@ -245,7 +246,7 @@
             position: relative;
         }
         .timer-btn {
-            margin-top: 16px;
+            margin-top: 20px;
         }
         .timer-btn a, .btn-wrapper a {
             background: radial-gradient(circle at 30% 30%, rgba(255,255,255,0.15), transparent 70%), linear-gradient(180deg, #fabc2c 0%, #e0a824 100%);
@@ -531,7 +532,6 @@
                         <span class="sub-title">Seconds</span>
                     </div>
                 </div>
-                <p class="timer-note">Cycle resets every 10 days—join anytime!</p>
             </div>
             <div class="timer-btn">
                 <a href="https://web.telegram.org/a/" target="_blank" rel="noopener noreferrer">
