--- a/index.html
+++ b/index.html
@@ -119,27 +119,23 @@
                 margin: 0;
             }
         }
-        .left-block .logo-wrapper {
-            display: inline-block;
-            border: 1px solid rgba(250, 188, 44, 0.2);
-            border-radius: 12px;
-            box-shadow: 0 0 8px 2px rgba(250, 188, 44, 0.35);
-        }
-        .left-block .logo-wrapper .meme-coin-pic {
+        .left-block .meme-coin-pic {
+            margin-top: 24px;
             width: 140px;
             height: 140px;
             border-radius: var(--border-radius);
             box-shadow: 0 0 20px var(--primary-shadow-color);
             animation: fadeIn 0.4s ease-out;
+            object-fit: cover;
         }
         @media (max-width: 639px) {
-            .left-block .logo-wrapper .meme-coin-pic {
+            .left-block .meme-coin-pic {
                 width: 140px;
                 height: 140px;
             }
         }
         @media (min-width: 1024px) {
-            .left-block .logo-wrapper .meme-coin-pic {
+            .left-block .meme-coin-pic {
                 width: 200px;
                 height: 200px;
             }
@@ -520,9 +516,7 @@
     <div class="header-container">
         <!-- Left Block: Logo, Timer, Button -->
         <div class="left-block">
-            <div class="logo-wrapper">
-                <img src="MemeCoinWeb.png" alt="MySol-x Meme Coin Logo" class="meme-coin-pic" loading="lazy">
-            </div>
+            <img src="MemeCoinWeb.png" alt="MySol-x Meme Coin Logo" class="meme-coin-pic" loading="lazy">
             <span class="timer-label">TIME LEFT</span>
             <div class="timer-desk">
                 <div class="timer-wrap" aria-live="polite">
