Update Yellowing Pro pic Boarder Restored index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* Root Variables */
         :root {
             --border-radius: 16px;
-            --primary-shadow-color: rgba(29, 155, 240, 0.7);
+            --primary-shadow-color: rgba(250, 188, 44, 0.7); /* Updated to yellow to match theme */
         }
 
         /* Reset and Base Styles */
