--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* Root Variables */
         :root {
             --border-radius: 16px;
-            --primary-shadow-color: rgba(250, 188, 44, 0.7); /* Updated to yellow to match theme */
+            --primary-shadow-color: rgba(250, 188, 44, 0.7);
         }
 
         /* Reset and Base Styles */
@@ -373,6 +373,10 @@
             background: #10171b;
             text-align: center;
         }
+        .detail-box.project-link {
+            min-width: 100px;
+            padding: 10px;
+        }
         .detail-box h3 {
             font-size: 12px;
             font-weight: 600;
@@ -566,14 +570,9 @@
                         <h3>Token</h3>
                         <p>$SOL-X</p>
                     </div>
-                    <div class="detail-box">
-                        <h3>Project links</h3>
+                    <div class="detail-box project-link">
+                        <h3>Project Link</h3>
                         <div class="social-links">
-                            <a href="https://x.com/i/flow/login" target="_blank" rel="noopener noreferrer">
-                                <svg viewBox="0 0 24 24">
-                                    <path d="M14.258 10.152L23.176 0h-2.113l-7.747 8.813L7.133 0H0l9.352 13.328L0 23.973h2.113l8.176-9.309 6.531 9.309h7.133zm-2.895 3.293l-.949-1.328L2.875 1.56h3.246l6.086 8.523.949 1.328 7.945 11.136h-3.246z"/>
-                                </svg>
-                            </a>
                             <a href="https://web.telegram.org/a/" target="_blank" rel="noopener noreferrer">
                                 <svg viewBox="0 0 24 24">
                                     <path d="M21 3c-.3.2-.7.5-1 .7L5 10c-.6.3-.9.8-.8 1.4.1.5.5.9 1 .9h.2l5-2 4 3.5c.2.2.5.3.8.2.3-.1.5-.3 .6-.6L20 4c.2-.6-.1-1.2-.7-1.4zM9 17l-1 4c-.1.4.1.8.5.9h.2c.3 0 .6-.2.7-.5l1.5-3.5-2-1.4z"/>
